[package]
name = "shreksuperslam_webapp"
version = "0.1.0"
authors = ["Alex Kerr <kirby@cpan.org>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
console_error_panic_hook = { version = "0.1.6" }
js-sys = { version = "0.3.49" }
serde = { version = "1.0", features = ["derive"] }
shrek-superslam = { path = "../../../rust" }
wasm-bindgen = { version = "0.2.63", features = ["serde-serialize"] }